third_party/rust/chromium_crates_io/vendor/cxx-v1/tests/ui/unrecognized_receiver.stderr
error: unrecognized receiver type
 --> tests/ui/unrecognized_receiver.rs:4:20
  |
4 |         fn f(self: &Unrecognized);
  |                    ^^^^^^^^^^^^^
